## Process this file with automake to produce Makefile.in

## Copyright (C) 2011 Samediggi

## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.

## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.

## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.

GT_LEXC_ROOT=root.lexc

# Set this to the names of all other source lexc files
GT_LEXC_SRCS=\
			 stems/abbr.lexc \
			 stems/acro.lexc \
			 stems/adj.lexc \
			 stems/adv.lexc \
			 stems/cc.lexc \
			 stems/cs.lexc \
			 stems/det.lexc \
			 stems/interj.lexc \
			 stems/noun.lexc \
			 stems/numeral.lexc \
			 stems/pp.lexc \
			 stems/pron.lexc \
			 stems/propernoun.lexc \
			 stems/punct.lexc \
			 stems/verb.lexc \
			 affixes/adj.lexc \
			 affixes/noun.lexc \
			 affixes/propernoun.lexc \
			 affixes/verb.lexc

# Set this to the names of all generated lexc files, if any
GENERATED_LEXC_SRCS=

# Set this to the names of all source xml files, if any
GT_XML_SRCS=

include $(top_srcdir)/am-shared/lexc-include.am

# vim: set ft=automake:
