## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# set this to name of cg3 dependency rules
GT_DEPENDENCY=dependency.cg3

# set this to name of cg3 dependency rules
GT_FUNCTIONS=functions.cg3

# set this to name of cg3 disambiguation rules
GT_DISAMBIGUATION=disambiguation.cg3

# set this to names of cg3 binaries 
GT_CG_TARGETS=disambiguation.bin functions.bin dependency.bin

include $(top_srcdir)/am-shared/syntax-include.am
