## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# set this to name of cg3 dependency rules
GT_DEPENDENCY=dependency.cg3

# set this to name of cg3 dependency rules
GT_FUNCTIONS=functions.cg3

# set this to name of cg3 disambiguation rules
GT_DISAMBIGUATION=disambiguation.cg3

# set this to names of cg3 binaries 
GT_CG_TARGETS=disambiguation.bin functions.bin dependency.bin

##################################################################
#### BEGIN: Add local processing instructions BELOW this line ####
##################################################################

#############################################
#### Add language-specific sources here: ####
GT_CG_LOCAL_SRCS=

#############################################################
#### Add language-specific targets to be installed here: ####
GT_CG_LOCAL_INST_TARGETS=

#################################################################
#### Add language-specific targets NOT to be installed here: ####
GT_CG_LOCAL_NOINST_TARGETS=

#################################################
#### Add language-specific build rules here: ####

##################################################################
#### END: Add local processing instructions ABOVE this line ######
##################################################################

include $(top_srcdir)/am-shared/syntax-include.am
